# sfup

./: CMakeLists.txt  README.md
sfu_controller/: README.md
sfu_controller/src/: main.cpp
sfu_core/: CMakeLists.txt
sfu_core/src/: Logger.cpp  Logger.h  configmanager.cpp  configmanager.h  filenameio.cpp  filenameio.h  webrtcconnection.h
sfu_media/src/: main.cpp  main.cpp.bk  telemetry_client.cpp
sfu_signal_server/: README.md  sfu_signal.json
sfu_signal_server/src/: main.cpp  sfc_signal_client.cpp  sfu_signal_client.cpp  sfu_signal_client.h
